# NetworkChat

./: .gitignore  CMakeLists.txt
docs/: protocol.md
include/common/: logger.h
src/client/: CMakeLists.txt
src/common/: CMakeLists.txt
src/server/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  logger_test.cpp
